# physai

./: README.md
backend/: .gitignore  GEMINI.md  README.md  crud.py  main.py  models.py  pyproject.toml  schemas.py
backend/alembic/versions/: 6bb3dab713e3_create_initial_tables.py
backend/physics_engine/: evaluator.py  executor.py
backend/scripts/: generate_synthetic_data.py
frontend/: .gitignore  GEMINI.md  README.md  index.html  package-lock.json  package.json  script.js  style.css
frontend/views/about/: index.html
frontend/views/course-selection/: index.html  script.js  style.css
frontend/views/problem-list/: index.html  script.js  style.css
frontend/views/problem-solving/: index.html  script.js  style.css
