[project]
name = "physai-backend"
version = "0.1.0"
requires-python = ">=3.12, <3.13"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "sqlalchemy==2.0.30",
    "python-jose==3.3.0",
    "pydantic-settings==2.3.3",
    "sympy==1.12",
    "numpy==1.26.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
